# llm-quality-judge

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONSISTENCY_GAP_REPORT_2026-02-16.md  README.md  REPOSITORY_EVALUATION.md  UC1_RESPONSE_FORMAT_INSTRUCTION.md  UNRESOLVED_ITEMS.md  pyproject.toml  review-findings-2026-02-24-uc1-structured-output.md
.claude/skills/evaluating-llm-quality/: README.md  REFERENCE.md  SKILL.md
configs/: run-config.local-openai.yaml  run-config.yaml
data/: testcases.jsonl  testcases.jsonl.example
docs/: 測定方式検討.md
schemas/: comparison-report.schema.json  judgements.schema.json  preprocess-output.schema.json  qa-output.schema.json  report-generation-output.schema.json  run-config.schema.json  uc1-report-output.schema.json  uc2-report-output.schema.json
src/llm_eval/: __main__.py  cli.py  config.py  llm_client.py  models.py  prompts.py  schema_validation.py  utils.py
src/llm_eval/stages/: autocheck.py  compare.py  inference.py  judge.py
src/llm_judge/: __init__.py  __main__.py  artifact_validation.py  cli.py  config.py  llm_client.py  models.py  prompts.py  schema_validation.py  testcase_loader.py  utils.py
src/llm_judge/stages/: autocheck.py  compare.py  consistency.py  inference.py  judge.py
tests/: test_artifact_schema_validation.py  test_compare_aggregation_methods.py  test_multiturn_prompt.py  test_prompt_hash_recording.py  test_run_config_validation.py  test_schema_path_resolution.py  test_structured_output.py  test_testcase_schema_enforcement.py  test_uc1_structured_output.py
(+14 files in other folders)
